# swagger.json
@@ -28,6 +28,10 @@
     {
       "name": "Week",
       "description": "Week endpoints"
+    },
+    {
+      "name": "User",
+      "description": "User endpoints"
     }
   ],
   "paths": {
@@ -139,7 +143,7 @@
         "summary": "Google authentication. WARNING: Works only for sign-in, after registered on front-end (if you're writing your back-end for a SPECIFIC front-end, then you can configure it right to work both for sign-up & sign-in)",
         "responses": {
           "200": {
-            "description": "Successful operation (redirect to front-end with token in query). Then use GET /user",
+            "description": "Successful operation (redirect to front-end with token in query). Then use GET /user/info",
             "content": {}
           },
           "403": {
@@ -224,6 +228,57 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ActiveTaskResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request (invalid request body or id) / No token provided",
+            "content": {}
+          },
+          "401": {
+            "description": "Unauthorized (invalid access token)",
+            "content": {}
+          },
+          "404": {
+            "description": "Invalid user / Invalid session / Task not found / Day not found",
+            "content": {}
+          }
+        }
+      }
+    },
+    "/task/single-active/{taskId}": {
+      "patch": {
+        "tags": ["Task"],
+        "summary": "Add task to provided days",
+        "security": [{ "Bearer": [] }],
+        "parameters": [
+          {
+            "name": "taskId",
+            "in": "path",
+            "required": true,
+            "description": "Task's id (id field in task object)",
+            "type": "string"
+          }
+        ],
+        "requestBody": {
+          "description": "Dates object",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/SingleActiveTaskRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SingleActiveTaskResponse"
                 }
               }
             }
@@ -379,6 +434,42 @@
                 }
               }
             }
+          },
+          "400": {
+            "description": "No token provided",
+            "content": {}
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {}
+          },
+          "404": {
+            "description": "Invalid user / Invalid session",
+            "content": {}
+          }
+        }
+      }
+    },
+    "/user/info": {
+      "get": {
+        "tags": ["User"],
+        "summary": "Get all user info",
+        "security": [{ "Bearer": [] }],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AllInfo"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "No token provided",
+            "content": {}
           },
           "401": {
             "description": "Unauthorized",
@@ -1523,6 +1614,120 @@
           }
         }
       },
+      "SingleActiveTaskRequest": {
+        "type": "object",
+        "required": ["days"],
+        "properties": {
+          "days": {
+            "type": "array",
+            "minumum": 8,
+            "maximum": 8,
+            "description": "Array of seven booleans, which represent which day of the week is active, and which isn't",
+            "items": {
+              "type": "boolen",
+              "description": "Day's date"
+            },
+            "example": [true, true, false, true, false, false, false]
+          }
+        }
+      },
+      "SingleActiveTaskResponse": {
+        "type": "object",
+        "properties": {
+          "updatedWeekPlannedRewards": {
+            "type": "integer",
+            "description": "Week's new amount of planned rewards",
+            "example": 3
+          },
+          "updatedTask": {
+            "type": "object",
+            "properties": {
+              "title": {
+                "type": "string",
+                "description": "Task's title",
+                "example": "Task 1"
+              },
+              "reward": {
+                "type": "integer",
+                "description": "Task's reward",
+                "minimum": 0,
+                "example": 1
+              },
+              "imageUrl": {
+                "type": "string",
+                "description": "Task's image URL"
+              },
+              "id": {
+                "type": "string",
+                "description": "Task's id",
+                "example": "507f1f77bcf86cd799439011"
+              },
+              "days": {
+                "type": "array",
+                "description": "Task's days",
+                "items": {
+                  "type": "object",
+                  "description": "Day's task",
+                  "properties": {
+                    "date": {
+                      "type": "string",
+                      "description": "Day's date",
+                      "example": "2020-12-28"
+                    },
+                    "isActive": {
+                      "type": "boolean",
+                      "description": "Task's active status"
+                    },
+                    "isCompleted": {
+                      "type": "boolean",
+                      "description": "Task's complete status"
+                    }
+                  }
+                },
+                "example": [
+                  [
+                    {
+                      "date": "2020-12-28",
+                      "isActive": true,
+                      "isCompleted": true
+                    },
+                    {
+                      "date": "2020-12-29",
+                      "isActive": true,
+                      "isCompleted": false
+                    },
+                    {
+                      "date": "2020-12-30",
+                      "isActive": false,
+                      "isCompleted": false
+                    },
+                    {
+                      "date": "2020-12-31",
+                      "isActive": true,
+                      "isCompleted": false
+                    },
+                    {
+                      "date": "2021-1-1",
+                      "isActive": false,
+                      "isCompleted": false
+                    },
+                    {
+                      "date": "2021-1-2",
+                      "isActive": false,
+                      "isCompleted": false
+                    },
+                    {
+                      "date": "2021-1-3",
+                      "isActive": false,
+                      "isCompleted": false
+                    }
+                  ]
+                ]
+              }
+            }
+          }
+        }
+      },
       "CompleteTaskRequest": {
         "type": "object",
         "required": ["date"],
@@ -1791,6 +1996,169 @@
           "success": {
             "type": "boolean",
             "example": "true"
+          },
+          "week": {
+            "type": "object",
+            "description": "User's current week",
+            "properties": {
+              "startWeekDate": {
+                "type": "string",
+                "description": "Week start date",
+                "example": "2020-12-28"
+              },
+              "endWeekDate": {
+                "type": "string",
+                "description": "Week end date",
+                "example": "2021-1-3"
+              },
+              "rewardsGained": {
+                "type": "integer",
+                "description": "Amount of rewards gained this week",
+                "example": 5
+              },
+              "rewardsPlanned": {
+                "type": "integer",
+                "description": "Amount of rewards planned for this week",
+                "example": 10
+              },
+              "_id": {
+                "type": "string",
+                "description": "Week's id",
+                "example": "507f1f77bcf86cd799439016"
+              },
+              "__v": {
+                "type": "integer",
+                "description": "MongoDB document's service versionKey (ignore)"
+              },
+              "tasks": {
+                "type": "array",
+                "description": "Array of week's tasks",
+                "items": {
+                  "type": "object",
+                  "description": "Week's task",
+                  "properties": {
+                    "title": {
+                      "type": "string",
+                      "description": "Task's title",
+                      "example": "Task 1"
+                    },
+                    "reward": {
+                      "type": "integer",
+                      "description": "Task's reward",
+                      "example": 5,
+                      "minimum": 1
+                    },
+                    "imageUrl": {
+                      "type": "string",
+                      "description": "Task's image URL"
+                    },
+                    "days": {
+                      "type": "array",
+                      "description": "Task's days",
+                      "items": {
+                        "type": "object",
+                        "description": "Day's task",
+                        "properties": {
+                          "date": {
+                            "type": "string",
+                            "description": "Day's date",
+                            "example": "2020-12-28"
+                          },
+                          "isActive": {
+                            "type": "boolean",
+                            "description": "Task's active status"
+                          },
+                          "isCompleted": {
+                            "type": "boolean",
+                            "description": "Task's complete status"
+                          }
+                        }
+                      }
+                    }
+                  }
+                },
+                "example": [
+                  {
+                    "title": "Task 1",
+                    "reward": 5,
+                    "imageUrl": "example.com/image123",
+                    "days": [
+                      {
+                        "date": "2020-12-28",
+                        "isActive": true,
+                        "isCompleted": true
+                      },
+                      {
+                        "date": "2020-12-29",
+                        "isActive": true,
+                        "isCompleted": false
+                      },
+                      {
+                        "date": "2020-12-30",
+                        "isActive": false,
+                        "isCompleted": false
+                      },
+                      {
+                        "date": "2020-12-31",
+                        "isActive": false,
+                        "isCompleted": false
+                      },
+                      {
+                        "date": "2021-1-1",
+                        "isActive": false,
+                        "isCompleted": false
+                      },
+                      {
+                        "date": "2021-1-2",
+                        "isActive": false,
+                        "isCompleted": false
+                      },
+                      {
+                        "date": "2021-1-3",
+                        "isActive": false,
+                        "isCompleted": false
+                      }
+                    ],
+                    "_id": "507f1f77bcf86cd799439013",
+                    "__v": 0
+                  }
+                ]
+              }
+            }
+          }
+        }
+      },
+      "AllInfo": {
+        "type": "object",
+        "properties": {
+          "message": {
+            "type": "string",
+            "example": "Successfully got all info"
+          },
+          "success": {
+            "type": "boolean",
+            "example": "true"
+          },
+          "user": {
+            "type": "object",
+            "properties": {
+              "email": {
+                "type": "string",
+                "description": "User's email",
+                "format": "email"
+              },
+              "id": {
+                "type": "string",
+                "description": "User's id",
+                "example": "507f1f77bcf86cd799439012"
+              },
+              "balance": {
+                "type": "integer",
+                "description": "User's rewards balance",
+                "example": 5,
+                "minimum": 0
+              }
+            }
           },
           "week": {
             "type": "object",
